--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)
 find_package(Qt6 REQUIRED COMPONENTS Charts)
 find_package(Qt6 REQUIRED COMPONENTS Core)
+find_package(Qt6 REQUIRED COMPONENTS Concurrent)
+
 
 find_package(pylon 7.1.0 REQUIRED)
+find_package(Eigen3 CONFIG REQUIRED)
 
 include_directories(headers/)
 
@@ -27,7 +30,10 @@ qt_add_executable(appHDNap
     headers/acquiredatacard.h
     headers/livedataconsumer.h
     headers/hitbuffer.h
-#    headers/kdcmotor.h
+    headers/kdcmotor.h
+    headers/mirrorcontrol.h
+#    headers/controller.h
+headers/filevalidator.h src/filevalidator.cpp
 
     src/hitbuffer.cpp
     src/main.cpp
@@ -39,7 +45,9 @@ qt_add_executable(appHDNap
     src/datacard.cpp
     src/acquiredatacard.cpp
     src/livedataconsumer.cpp
-#    src/kdcmotor.cpp
+    src/kdcmotor.cpp
+    src/mirrorcontrol.cpp
+#    src/controller.cpp
 )
 
 qt_add_qml_module(appHDNap
@@ -54,6 +62,7 @@ qt_add_qml_module(appHDNap
     ui/ViewWindow.qml
     ui/FileBox.qml
     ui/ZChartView.qml
+    ui/MirrorControl.qml
 )
 
 set_target_properties(appHDNap PROPERTIES
@@ -68,6 +77,8 @@ target_link_libraries(appHDNap
     PRIVATE Qt6::Quick
     Qt6::Charts
     Qt6::Core
+    Qt6::Concurrent
+    Eigen3::Eigen
     pylon::pylon
     AqMD3
 )
